finishing html for profile

--- a/frontend/style/sass/profile.scss
+++ b/frontend/style/sass/profile.scss
@@ -19,4 +19,16 @@
         text-align: right;
         padding: 10px;
     }
+
+    .box {
+        margin-bottom: 5px;
+    }
+
+    .status td, .privacy td {
+        text-align: left;
+    }
+
+    input {
+        
+    }
 }
