--- a/frontend/style/sass/main.sass
+++ b/frontend/style/sass/main.sass
@@ -54,7 +54,9 @@
   width: 100%
 .full-height
   height: 100%
-  
+
+.mdl-layout-title .mdl-button
+  color: white
 
 .mdl-layout
   position: absolute
