--- a/frontend/style/css/main.css
+++ b/frontend/style/css/main.css
@@ -1,49 +1,118 @@
-/* line 1, ../sass/profile.scss */
 .profile {
   background-color: #eee;
-  padding: 10px;
-}
-/* line 5, ../sass/profile.scss */
-.profile hr {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-/* line 11, ../sass/profile.scss */
-.profile .header {
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 12px;
-  color: #444;
-}
-/* line 18, ../sass/profile.scss */
-.profile .password {
-  text-align: right;
-  padding: 10px;
-}
-/* line 23, ../sass/profile.scss */
-.profile .box {
-  margin-bottom: 5px;
-}
-/* line 27, ../sass/profile.scss */
-.profile .status td, .profile .privacy td {
-  text-align: left;
-}
+  padding: 10px; }
+  .profile hr {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%; }
+  .profile .header {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    color: #444; }
+  .profile .password {
+    text-align: right;
+    padding: 10px; }
+  .profile .box {
+    margin-bottom: 5px; }
+  .profile .status td, .profile .privacy td {
+    text-align: left; }
 
-/* line 1, ../sass/login.scss */
 .login, .registration {
   padding: 10px;
-  background-color: #eee;
-}
-/* line 6, ../sass/login.scss */
-.login .header, .registration .header {
-  font-size: 12px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #444;
-}
+  background-color: #eee; }
+  .login .header, .registration .header {
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #444; }
 
-/* line 12, ../sass/main.sass */
+.chat .text-muted {
+  color: #999; }
+.chat .sidebar {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 175px;
+  background-color: #f0f0f0;
+  border-right: 1px #b6b6b6 solid;
+  overflow: auto;
+  overflow-x: hidden; }
+.chat .main {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 175px;
+  right: 0px;
+  background-color: #E1E5EC; }
+.chat .addMessage {
+  border-bottom: 1px #b6b6b6 solid;
+  text-align: right;
+  padding: 5px; }
+.chat .conversation {
+  padding: 10px;
+  border-bottom: 1px #e1e1e1 solid;
+  /*border-top: 1px #ffffff solid;*/ }
+.chat .conversation:hover {
+  background-color: #d7d7d7;
+  /*color: #eee;*/
+  pointer: hand; }
+.chat .conversation.active {
+  background-color: #008CBA;
+  color: white; }
+.chat .main .top {
+  padding: 9px 5px 8px 5px;
+  border-bottom: 1px #cecece solid; }
+.chat .main .bottom {
+  margin: 10px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  right: 0px; }
+.chat .main .bottom form {
+  position: relative; }
+.chat .main .bottom .loading {
+  position: absolute;
+  top: 10px;
+  right: 8px;
+  color: #178D00; }
+.chat .main .messages {
+  position: absolute;
+  top: 49px;
+  bottom: 56px;
+  left: 5px;
+  right: 5px;
+  overflow: auto; }
+.chat .main .messages table {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  table-layout: fixed; }
+.chat .main .messages .message {
+  margin: 5px;
+  padding: 8px;
+  clear: both;
+  border-radius: 5px;
+  max-width: 75%;
+  word-wrap: break-word; }
+.chat .main .timestamp {
+  padding: 10px;
+  clear: both;
+  text-align: center;
+  font-size: 10px;
+  color: #545454; }
+.chat .main .messages .message.sender {
+  float: right;
+  background-color: #92C4F9; }
+.chat .main .messages .message.receiver {
+  float: left;
+  background-color: #d6d6d6; }
+.chat input.to {
+  width: 400px;
+  border: none;
+  background-color: #E1E5EC; }
+
 *, *:after, *:before {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -53,122 +122,82 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-}
+  user-select: none; }
 
-/* line 18, ../sass/main.sass */
 .mdl-layout__header-row, .mdl-layout__tab-bar-container, .mdl-layout__tab-bar {
   height: 44px;
-  overflow: visible;
-}
+  overflow: visible; }
 
-/* line 22, ../sass/main.sass */
 .mdl-layout__tab-bar-container {
-  height: 43px;
-}
+  height: 43px; }
 
-/* line 25, ../sass/main.sass */
 .mdl-layout__tab {
   height: 44px;
-  line-height: 42px;
-}
-/* line 28, ../sass/main.sass */
-.mdl-layout__tab:focus {
-  outline: none;
-}
-/* line 31, ../sass/main.sass */
-.mdl-layout__tab:hover {
-  color: white;
-}
-/* line 34, ../sass/main.sass */
-.mdl-layout__tab.is-active {
-  border-bottom: 3px solid white;
-  color: white;
-}
+  line-height: 42px; }
+  .mdl-layout__tab:focus {
+    outline: none; }
+  .mdl-layout__tab:hover {
+    color: white; }
+  .mdl-layout__tab.is-active {
+    border-bottom: 3px solid white;
+    color: white; }
 
-/* line 38, ../sass/main.sass */
 .main-action-button {
   bottom: 2em;
   right: 4em;
-  position: absolute;
-}
+  position: absolute; }
 
-/* line 43, ../sass/main.sass */
 .plus-spread {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-/* line 47, ../sass/main.sass */
-.plus-spread.vertical {
-  flex-direction: column;
-}
-/* line 49, ../sass/main.sass */
-.plus-spread.align-bottom {
-  align-items: bottom;
-}
-/* line 51, ../sass/main.sass */
-.plus-spread.pull-left {
-  justify-content: flex-start;
-}
+  align-items: center; }
+  .plus-spread.vertical {
+    flex-direction: column; }
+  .plus-spread.align-bottom {
+    align-items: bottom; }
+  .plus-spread.pull-left {
+    justify-content: flex-start; }
 
-/* line 53, ../sass/main.sass */
 .full-width {
-  width: 100%;
-}
+  width: 100%; }
 
-/* line 55, ../sass/main.sass */
 .full-height {
-  height: 100%;
-}
+  height: 100%; }
 
-/* line 59, ../sass/main.sass */
 .mdl-layout {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
-  top: 0;
-}
+  top: 0; }
 
-/* line 66, ../sass/main.sass */
 .mdl-layout__container {
   height: 100%;
   position: absolute;
-  width: 100%;
-}
+  width: 100%; }
 
-/* line 71, ../sass/main.sass */
 .mdl-layout__content {
   background: #f9f9f9;
   transition: 200ms ease-in-out;
   transform: translateX(0px);
   display: flex;
   flex-direction: row;
-  justify-content: center;
-}
+  justify-content: center; }
 
-/* line 79, ../sass/main.sass */
 .page-content {
   flex-grow: 1;
   width: 100%;
   max-width: 1060px;
   z-index: 1;
-  background: #f9f9f9;
-}
-/* line 83, ../sass/main.sass */
-.page-content::-webkit-scrollbar {
-  display: none;
-}
+  background: #f9f9f9; }
+  .page-content::-webkit-scrollbar {
+    display: none; }
 
 /* Post styling */
-/* line 90, ../sass/main.sass */
 .feed {
   list-style: none;
-  padding: 0.75em;
-}
+  padding: 0.75em; }
 
-/* line 94, ../sass/main.sass */
 .post {
   background: white;
   width: 100%;
@@ -176,27 +205,19 @@
   padding: 0.5em 1em;
   border: 1px solid #ddd;
   border-bottom: 2px solid #ddd;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
-/* line 103, ../sass/main.sass */
 .post-score {
   color: #999;
-  margin-right: 0.25em;
-}
+  margin-right: 0.25em; }
 
-/* line 107, ../sass/main.sass */
 .post-comments {
-  font-size: 0.9em;
-}
+  font-size: 0.9em; }
 
-/* line 110, ../sass/main.sass */
 .action {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /* Dialog */
-/* line 115, ../sass/main.sass */
 .modal-dialog, .modal-backdrop {
   position: fixed;
   display: flex;
@@ -208,67 +229,46 @@
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
-}
-/* line 128, ../sass/main.sass */
-.modal-dialog .modal-content, .modal-backdrop .modal-content {
-  position: absolute;
-  top: 2em;
-  right: 2em;
-  bottom: 2em;
-  left: 2em;
-  background: white;
-  box-shadow: 1px 1px 10px #555;
-  font-size: 1.1em;
-  line-height: 1.5em;
-  padding: 1em;
-}
-/* line 139, ../sass/main.sass */
-.modal-dialog .modal-content .submit, .modal-backdrop .modal-content .submit {
-  margin-top: 12px;
-}
-/* line 141, ../sass/main.sass */
-.modal-dialog .modal-content h2, .modal-backdrop .modal-content h2 {
-  margin-top: 5px;
-}
-/* line 143, ../sass/main.sass */
-.modal-dialog .modal-content label, .modal-backdrop .modal-content label {
-  display: block;
-  font-size: 0.9em;
-}
-/* line 146, ../sass/main.sass */
-.modal-dialog .modal-content h5, .modal-backdrop .modal-content h5 {
-  display: inline-block;
-  margin: 0;
-}
-/* line 149, ../sass/main.sass */
-.modal-dialog .modal-content textarea, .modal-backdrop .modal-content textarea {
-  width: 100%;
-  outline: none;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  font-size: 1em;
-}
-/* line 155, ../sass/main.sass */
-.modal-dialog .modal-content input, .modal-backdrop .modal-content input {
-  outline: none;
-}
-/* line 157, ../sass/main.sass */
-.modal-dialog .modal-content .modal-title, .modal-backdrop .modal-content .modal-title {
-  padding-bottom: 1em;
-  border-bottom: 1px solid #ddd;
-}
-/* line 160, ../sass/main.sass */
-.modal-dialog .modal-content .profile, .modal-backdrop .modal-content .profile {
-  background: white;
-}
-/* line 162, ../sass/main.sass */
-.modal-dialog .modal-content .submit, .modal-backdrop .modal-content .submit {
-  margin-top: 1em;
-}
+  left: 0; }
+  .modal-dialog .modal-content, .modal-backdrop .modal-content {
+    position: absolute;
+    top: 2em;
+    right: 2em;
+    bottom: 2em;
+    left: 2em;
+    background: white;
+    box-shadow: 1px 1px 10px #555;
+    font-size: 1.1em;
+    line-height: 1.5em;
+    padding: 1em; }
+    .modal-dialog .modal-content .submit, .modal-backdrop .modal-content .submit {
+      margin-top: 12px; }
+    .modal-dialog .modal-content h2, .modal-backdrop .modal-content h2 {
+      margin-top: 5px; }
+    .modal-dialog .modal-content label, .modal-backdrop .modal-content label {
+      display: block;
+      font-size: 0.9em; }
+    .modal-dialog .modal-content h5, .modal-backdrop .modal-content h5 {
+      display: inline-block;
+      margin: 0; }
+    .modal-dialog .modal-content textarea, .modal-backdrop .modal-content textarea {
+      width: 100%;
+      outline: none;
+      border: none;
+      border-bottom: 1px solid #ccc;
+      font-size: 1em; }
+    .modal-dialog .modal-content input, .modal-backdrop .modal-content input {
+      outline: none; }
+    .modal-dialog .modal-content .modal-title, .modal-backdrop .modal-content .modal-title {
+      padding-bottom: 1em;
+      border-bottom: 1px solid #ddd; }
+    .modal-dialog .modal-content .profile, .modal-backdrop .modal-content .profile {
+      background: white; }
+    .modal-dialog .modal-content .submit, .modal-backdrop .modal-content .submit {
+      margin-top: 1em; }
 
-/* line 165, ../sass/main.sass */
 .modal-backdrop {
   opacity: 0.3;
-  background-color: #555;
-}
+  background-color: #555; }
+
+/*# sourceMappingURL=main.css.map */
