--- a/frontend/style/css/main.css
+++ b/frontend/style/css/main.css
@@ -164,6 +164,9 @@
 .full-height {
   height: 100%; }
 
+.mdl-layout-title .mdl-button {
+  color: white; }
+
 .mdl-layout {
   position: absolute;
   left: 0;
