Flag, names, controllers

--- a/frontend/style/sass/main.sass
+++ b/frontend/style/sass/main.sass
@@ -39,7 +39,7 @@
 .main-action-button
   bottom: 2em
   right: 4em
-  position: absolute
+  position: fixed
 
 .plus-spread
   display: flex
@@ -112,6 +112,13 @@
 
 .action
   cursor: pointer
+i.action, .action i
+  color: #bbb
+  &:hover
+    color: #555
+
+.flag
+  font-size: 1.1em
 
 /* Dialog */
   
