Existential reality makes me sad.

--- a/frontend/style/sass/main.sass
+++ b/frontend/style/sass/main.sass
@@ -78,6 +78,7 @@
   display: flex
   flex-direction: row
   justify-content: center
+  padding-bottom: 30px
   
 .page-content
   flex-grow: 1
@@ -109,9 +110,14 @@
 
 .post-comments
   font-size: .9em
+  margin-right: .5em
+
+.post-author
+  color: #777
 
 .action
   cursor: pointer
+
 i.action, .action i
   color: #bbb
   &:hover
@@ -175,3 +181,4 @@ i.action, .action i
 .modal-backdrop
   opacity: .3
   background-color: #555
+
